Wed May 18 02:02:58 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_aref): remove useless condition and call rb_fix2int.
	  rb_reg_nth_match handles negative index.

Wed May 18 01:57:43 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_values_at): MatchData#values_at supports named captures
	  [Feature #9179]

	* re.c (namev_to_backref_number): separeted.

Tue May 18 00:05:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum): Optimize for a range from int to int.

	* test/ruby/test_enum.rb (test_range_sum): Move from test_range.rb,
	  and add assertions for some conditions.

	* test/ruby/test_enum.rb (test_hash_sum): Move from test_hash.rb.

	* test/ruby/test_hash.rb, test/ruby/test_range.rb: Remove test_sum.

Tue May 17 23:08:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum): [DOC] Write documentation.

Tue May 17 22:53:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum): Implement Enumerable#sum.

	* test/ruby/test_enum.rb (test_sum): Test sum for Enumerable.

	* test/ruby/test_hash.rb (test_sum): Test sum for Hash.

	* test/ruby/test_range.rb (test_sum): Test sum for Range.

Tue May 17 22:11:41 2016  Tanaka Akira  <akr@fsij.org>

	* object.c, numeric.c, enum.c, ext/-test-/bignum/mul.c,
	  lib/rexml/quickpath.rb, lib/rexml/text.rb, lib/rexml/xpath_parser.rb,
	  lib/rubygems/specification.rb, lib/uri/generic.rb,
	  bootstraptest/test_eval.rb, basictest/test.rb,
	  test/-ext-/bignum/test_big2str.rb, test/-ext-/bignum/test_div.rb,
	  test/-ext-/bignum/test_mul.rb, test/-ext-/bignum/test_str2big.rb,
	  test/csv/test_data_converters.rb, test/date/test_date.rb,
	  test/json/test_json_generate.rb, test/minitest/test_minitest_mock.rb,
	  test/openssl/test_cipher.rb, test/rexml/test_jaxen.rb,
	  test/ruby/test_array.rb, test/ruby/test_basicinstructions.rb,
	  test/ruby/test_bignum.rb, test/ruby/test_case.rb,
	  test/ruby/test_class.rb, test/ruby/test_complex.rb,
	  test/ruby/test_enum.rb, test/ruby/test_eval.rb,